force-app/main/default/objects/Lead/fields/Normalized_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Mobile_Phone__c</fullName>
    <description>Contains the normalized value  of MobilePhone field</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Normalized Mobile Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>