force-app/main/default/objects/Lead/fields/Normalized_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Normalized Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>