force-app/main/default/objects/Lead/fields/Onboarding_Intent__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Intent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onboarding Intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>