force-app/main/default/objects/Lead/fields/Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Last_Name__c</fullName>
    <formula>Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Last Name</label>
    <type>Text</type>
</CustomField>