force-app/main/default/objects/Lead/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>