force-app/main/default/objects/Lead/fields/Pain_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Pain_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pain - Timestamp</label>
    <type>DateTime</type>
</CustomField>