force-app/main/default/objects/Lead/fields/Partner_Program_Request_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Request_Create_Date__c</fullName>
    <description>Timestamp of when an accountant fills out a form requesting to join the partner program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Program Request Create Date</label>
    <type>DateTime</type>
</CustomField>