force-app/main/default/objects/Lead/fields/Partner_Referral__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral__c</fullName>
    <description>Indicates if the lead is a referral from a partner based on either (1) the lead source is ‘Partner Referral’, (2) the lead source is ‘Added by Client’ (2) a sold by account is present, OR (3) a referred by account is present.</description>
    <formula>OR(
  ISPICKVAL(LeadSource,&apos;Partner Referral&apos;),
  ISPICKVAL(LeadSource,&apos;Added by Client&apos;),  
  NOT(ISBLANK(Sold_By__c)),
  NOT(ISBLANK(Referred_By__c))
)</formula>
    <inlineHelpText>Indicates if the lead is a referral from a partner based on either (1) the lead source is ‘Partner Referral’, (2) the lead source is ‘Added by Client’ (2) a sold by account is present, OR (3) a referred by account is present.</inlineHelpText>
    <label>Partner Referral</label>
    <type>Checkbox</type>
</CustomField>