force-app/main/default/objects/Lead/fields/Potential_Fraud_Lead__c.field-meta.xml
<CustomField>
    <fullName>Potential_Fraud_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Lead is currently flagged as Potential Fraud from payroll.</description>
    <label>Potential Fraud Lead</label>
    <type>Checkbox</type>
</CustomField>