force-app/main/default/objects/Lead/fields/Previous_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payroll_Provider__c</fullName>
    <label>Payroll Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>ADP (other product)</fullName>
            </value>
            <value>
                <fullName>ADP (RUN product)</fullName>
            </value>
            <value>
                <fullName>ADP Run</fullName>
            </value>
            <value>
                <fullName>Intuit (Online Payroll)</fullName>
            </value>
            <value>
                <fullName>Intuit (other product)</fullName>
            </value>
            <value>
                <fullName>Intuit Online Payroll</fullName>
            </value>
            <value>
                <fullName>Local Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ovation (Heartland) Payroll</fullName>
            </value>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>PEO / Full Service Backend Provider</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>SurePayroll</fullName>
            </value>
            <value>
                <fullName>Thompson Reuters</fullName>
            </value>
            <value>
                <fullName>Wave</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>