force-app/main/default/objects/Lead/fields/Raw_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Raw_Stamp__c</fullName>
    <description>Stamps lead as Raw To Closed when a Raw lead is Unqualified or Future Opp, without ever entering MQL stage</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Raw to Closed Stamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>