force-app/main/default/objects/Lead/fields/Recent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Recent_Campaign__c</fullName>
    <description>Used to update Recent Campaign on Campaign Member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recent Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>