force-app/main/default/objects/Lead/fields/Recent_Source__c.field-meta.xml
<CustomField>
    <fullName>Recent_Source__c</fullName>
    <description>Used to update Recent Source on Campaign Member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recent Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>