force-app/main/default/objects/Lead/fields/Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Referral_Token__c</fullName>
    <description>This field is created to map referral token from GF Lead.</description>
    <label>Referrer Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>