force-app/main/default/objects/Lead/fields/Referred_By_Accounting_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Accounting_Firm_Id__c</fullName>
    <description>Maps to Referred_By_Accounting_Firm_Id__c from GF Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Referred By Accounting Firm Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>