force-app/main/default/objects/Lead/fields/Referred_By_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Company_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred By Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>