force-app/main/default/objects/Lead/fields/Rev_Employee__c.field-meta.xml
<CustomField>
    <fullName>Rev_Employee__c</fullName>
    <formula>IF(
    OR(
       ISBLANK(NumberOfEmployees), NumberOfEmployees=0), 
       NULL, AnnualRevenue / NumberOfEmployees)</formula>
    <label>Rev / Employee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>