force-app/main/default/objects/Lead/fields/SAL_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Date__c</fullName>
    <description>Field tracks the date the Lead was moved to SAL Lead Status.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SAL Date</label>
    <type>Date</type>
</CustomField>