force-app/main/default/objects/Lead/fields/Sales_Tax_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the potential account is eligible for sales tax</description>
    <label>Sales Tax Applicable</label>
    <type>Checkbox</type>
</CustomField>