force-app/main/default/objects/Lead/fields/Sales_Tax_Info__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Info__c</fullName>
    <description>Based on Lead state, an estimate of the applicable sales tax</description>
    <label>Sales Tax Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>