force-app/main/default/objects/Lead/fields/Sales_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Treatment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For Lab experiments, describes which landing page the lead came from. Leads come in requesting a demo only.</inlineHelpText>
    <label>Sales Treatment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>