force-app/main/default/objects/Lead/fields/Served_User__c.field-meta.xml
<CustomField>
    <fullName>Served_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Served User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>