force-app/main/default/objects/Lead/fields/Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Sold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <infoMessage>Displaying reseller accounts ONLY.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sold By</relationshipLabel>
    <relationshipName>LeadsSoldBy</relationshipName>
    <type>Lookup</type>
</CustomField>