force-app/main/default/objects/Lead/fields/Submitted_From__c.field-meta.xml
<CustomField>
    <fullName>Submitted_From__c</fullName>
    <description>This field is an indicator to identify if the GF lead record is created from sign up page or password page</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted From</label>
    <length>30</length>
    <type>Text</type>
</CustomField>