force-app/main/default/objects/Lead/fields/Trk_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Trk_Keyword__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trk Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>