force-app/main/default/objects/Lead/fields/Trk_Placement__c.field-meta.xml
<CustomField>
    <fullName>Trk_Placement__c</fullName>
    <label>Trk Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>