force-app/main/default/objects/Lead/fields/Trk_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>Trk_UTM_Content__c</fullName>
    <label>Trk UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>