force-app/main/default/objects/Lead/fields/Unique_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Unique_Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique Email Address</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>