force-app/main/default/objects/Lead/fields/Variant_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Variant_Identifier__c</fullName>
    <description>Captures Experimentation Variant Identifier from Panda.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Variant Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>