force-app/main/default/objects/Lead/fields/Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Visitor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>