force-app/main/default/objects/Lead/fields/ZP_Accountant_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Accountant_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Api</inlineHelpText>
    <label>Accountant Lead ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>