force-app/main/default/objects/Lead/fields/ZP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_ID__c</fullName>
    <description>When a lead accepts their invite and creates an account on ZP.com, they create a company. Before the SFDC lead is converted, we set this value to the ZP.company.id and it is Mapped to the SFDC Account ZP Company ID field and used as the external ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>