force-app/main/default/objects/Lead/fields/ZP_Company_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Trade_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Trade Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>