force-app/main/default/objects/Lead/fields/ZP_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>ZP_Firm_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Accounting Firm ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>