force-app/main/default/objects/Lead/fields/ZP_Lead_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ZP_Lead_Campaign__c</fullName>
    <description>Panda Company Lead Campaign Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>