force-app/main/default/objects/Lead/fields/ZP_Lead_Created_At_Date__c.field-meta.xml
<CustomField>
    <fullName>ZP_Lead_Created_At_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Lead Created At</label>
    <type>Date</type>
</CustomField>