force-app/main/default/objects/Lead/fields/ZP_Lead_Promo__c.field-meta.xml
<CustomField>
    <fullName>ZP_Lead_Promo__c</fullName>
    <description>Promo field from Panda Company Leads</description>
    <label>Company Lead Promo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>