force-app/main/default/objects/Lead/fields/ZP_User_Id__c.field-meta.xml
<CustomField>
    <fullName>ZP_User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZP User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>