force-app/main/default/objects/Lead/recordTypes/Reseller.recordType-meta.xml
<RecordType>
    <fullName>Reseller</fullName>
    <active>true</active>
    <businessProcess>Partner</businessProcess>
    <label>Reseller</label>
</RecordType>