force-app/main/default/objects/Lead/validationRules/Direct_Status_Restrictions_BtN_Future_Op.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_Status_Restrictions_BtN_Future_Op</fullName>
    <active>true</active>
    <description>Direct lead in Back to Nurture, Future Opp status cannot move back to Raw, AQL</description>
    <errorConditionFormula>AND (
NOT( $User.Exempt_from_Validation_Rules__c),
OR (ISPICKVAL (Status, &quot;Raw&quot;),
      ISPICKVAL (Status, &quot;AQL&quot;)),

OR (TEXT (PRIORVALUE (Status)) = &quot;Back to Nurture&quot;,
      TEXT (PRIORVALUE (Status)) = &quot;Future Opportunity&quot;)


)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>A lead in Back to Nurture or Future Opp status cannot move back to Raw or AQL. If the lead is being re-worked, set to MQL.</errorMessage>
</ValidationRule>