force-app/main/default/objects/Lead/validationRules/Direct_Status_Restrictions_MQL.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_Status_Restrictions_MQL</fullName>
    <active>true</active>
    <description>Direct lead in MQL status cannot move back to Raw, AQL</description>
    <errorConditionFormula>AND (
NOT( $User.Exempt_from_Validation_Rules__c),
OR (ISPICKVAL (Status, &quot;Raw&quot;),
      ISPICKVAL (Status, &quot;AQL&quot;)),

TEXT (PRIORVALUE (Status)) = &quot;MQL&quot;

)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>A lead in MQL status cannot move back to Raw or AQL. If the lead needs more nurture, set Status to Back to Nurture</errorMessage>
</ValidationRule>