force-app/main/default/objects/Lead/validationRules/Global_Require_Lead_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_Require_Lead_Source</fullName>
    <active>true</active>
    <description>Excludes Administrators</description>
    <errorConditionFormula>AND(
  ISBLANK(TEXT(LeadSource)),
  NOT( $User.Exempt_from_Validation_Rules__c)
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>&apos;Lead Source&apos; is required</errorMessage>
</ValidationRule>