force-app/main/default/objects/Lead/validationRules/Global_Require_Lead_Status_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_Require_Lead_Status_Detail</fullName>
    <active>true</active>
    <description>Excludes Administrators</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Status, &apos;Unqualified&apos;),
    ISPICKVAL(Status, &apos;Future Opportunity&apos;)    
  ),
  ISBLANK(TEXT(Lead_Status_Detail__c)),
  NOT( $User.Exempt_from_Validation_Rules__c),
  $User.Alias  &lt;&gt; &apos;winte&apos;
)</errorConditionFormula>
    <errorDisplayField>Lead_Status_Detail__c</errorDisplayField>
    <errorMessage>&apos;Lead Status Detail&apos; is required</errorMessage>
</ValidationRule>