force-app/main/default/objects/Lead/validationRules/Reseller_Require_Other_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>Reseller_Require_Other_Service</fullName>
    <active>true</active>
    <description>If Service = Other, required &quot;Other Practice Type&quot; detail</description>
    <errorConditionFormula>AND(
  RecordType.Name = &apos;Reseller&apos;,
  ISPICKVAL(Practice_Type__c , &apos;Other&apos;), 
  ISBLANK(Other_Practice_Detail__c),
  NOT( $User.Exempt_from_Validation_Rules__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Practice_Detail__c</errorDisplayField>
    <errorMessage>&apos;Other Practice Detail&apos; is required</errorMessage>
</ValidationRule>