force-app/main/default/objects/Lead/validationRules/Reseller_Require_Practice_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Reseller_Require_Practice_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  RecordType.Name = &apos;Reseller&apos;, 
  ISBLANK(TEXT(Practice_Type__c)),
  ISPICKVAL(Status, &apos;Qualified&apos;),
  NOT( $User.Exempt_from_Validation_Rules__c) 
)</errorConditionFormula>
    <errorDisplayField>Practice_Type__c</errorDisplayField>
    <errorMessage>&apos;Practice Type&apos; is required</errorMessage>
</ValidationRule>